# FW_Zephyr_IG_LTE

./: CMakeLists.txt  prj.conf
src/: main.c  main.h
src/modbus_IG/: modbus_IG.c  modbus_IG.h
src/modem_IG/: modem_IG.c  modem_IG.h
src/mqtt_IG/: mqtt_IG.c  mqtt_IG.h
